--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
     <link rel = "icon" href = 
-    "./assets/main/tarun1.png" 
+    "./assets/main/tarun1.ico" 
             type = "image/x-icon">
 </head>
 <body>
