--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
                     <img src="./assets/p8.PNG" class="project-img" alt="project 1">
                 </div>
                 <h2 class="experience-sub-title project-title">Package Designs</h2>
-                <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='./asssets/p8.png'" >Click Here</button>
+                <div class="btn-container"> <a href="./image.html">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='./asssets/p8.png'">Click Here</button></a>
 
                 </div>
             </div>
