--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="card" data-name="thumbnail">
-            <img src="assets/t22.jpg" alt="">
+            <img src="assets/t19.jpg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
                 <p class="card_text">DIYA PLAYS </p>
@@ -90,14 +90,14 @@
             <img src="assets/p3.jpg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Poster</h6>
-                <p class="card_text">THOR GIVEAWAY </p>
+                <p class="card_text">4SS ESPORTS </p>
             </div>
         </div>
         <div class="card" data-name="poster">
             <img src="assets/p11.jpeg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Poster</h6>
-                <p class="card_text">THOR GIVEAWAY </p>
+                <p class="card_text">HAZARD TOWN </p>
             </div>
         </div>
         <div class="card" data-name="thumbnail">
@@ -125,14 +125,14 @@
             <img src="assets/t9.jpg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
-                <p class="card_text">DIYA PLAYS </p>
+                <p class="card_text">PRITY PLAYZ </p>
             </div>
         </div>
         <div class="card" data-name="thumbnail">
             <img src="assets/t10.jpg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
-                <p class="card_text">DIYA PLAYS </p>
+                <p class="card_text">DIYA PLAYS</p>
             </div>
         </div>
         <div class="card" data-name="thumbnail">
@@ -188,18 +188,18 @@
             <img src="assets/t18.jpg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
-                <p class="card_text">DIYA PLAYS </p>
+                <p class="card_text">QUEEN HELL GAMING</p>
             </div>
         </div>
-        <div class="card" data-name="thumbnail">
-            <img src="assets/t18.jpg" alt="">
+        <div class="card" data-name="poster">
+            <img src="assets/t45.jpg" alt="">
             <div class="card_body">
-                <h6 class="card_title">Thumbnail</h6>
-                <p class="card_text">DIYA PLAYS </p>
+                <h6 class="card_title">Poster</h6>
+                <p class="card_text">OWO CLUB </p>
             </div>
         </div>
         <div class="card" data-name="thumbnail">
-            <img src="assets/t19.jpg" alt="">
+            <img src="assets/t22.jpg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
                 <p class="card_text">DIYA PLAYS </p>
@@ -220,12 +220,207 @@
             </div>
         </div>
         <div class="card" data-name="thumbnail">
-            <img src="assets/t22.jpg" alt="">
+            <img src="assets/t23.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">JOD YT</p>
+            </div>
+        </div>
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t24.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">HYDRA OFFICIAL</p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t25.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">MG ESPORTS</p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t26.jpg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
                 <p class="card_text">DIYA PLAYS </p>
             </div>
         </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t27.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">SAURABH GAMING</p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t28.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">SAURABH GAMING</p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t29.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">SAURABH GAMING </p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t30.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">MADHU GAMING</p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t31.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">SAURABH GAMING</p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t32.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">DIYA PLAYS </p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t33.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">DIYA PLAYS </p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t34.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">DIYA PLAYS </p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t35.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">DIYA PLAYS </p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t36.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">MADHU GAMING</p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t37.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">DIYA PLAYS </p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t38.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">DDHAKAD YT</p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t39.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">DIYA PLAYS </p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t40.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">DIYA PLAYS </p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t41.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">DIYA PLAYS </p>
+            </div>
+        </div>
+
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t43.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">HAZARD GAMING </p>
+            </div>
+        </div>
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t46.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">HAZARD GAMING </p>
+            </div>
+        </div>
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t47.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">HAZARD GAMING </p>
+            </div>
+        </div>
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t48.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">HAZARD GAMING </p>
+            </div>
+        </div>
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t49.jpeg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">HAZARD GAMING </p>
+            </div>
+        </div>
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t50.jpeg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">HAZARD GAMING </p>
+            </div>
+        </div>
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t51.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">HAZARD GAMING </p>
+            </div>
+        </div>
+
+
 
     </div>
 
