--- a/projects.html
+++ b/projects.html
@@ -381,42 +381,42 @@
             <img src="assets/t46.jpg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
-                <p class="card_text">HAZARD GAMING </p>
+                <p class="card_text">ANONYMOUS</p>
             </div>
         </div>
         <div class="card" data-name="thumbnail">
             <img src="assets/t47.jpg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
-                <p class="card_text">HAZARD GAMING </p>
+                <p class="card_text">ANONYMOUS </p>
             </div>
         </div>
         <div class="card" data-name="thumbnail">
             <img src="assets/t48.jpg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
-                <p class="card_text">HAZARD GAMING </p>
+                <p class="card_text">MYTHIC THOR </p>
             </div>
         </div>
         <div class="card" data-name="thumbnail">
             <img src="assets/t49.jpeg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
-                <p class="card_text">HAZARD GAMING </p>
+                <p class="card_text">ANONYMOUS </p>
             </div>
         </div>
         <div class="card" data-name="thumbnail">
             <img src="assets/t50.jpeg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
-                <p class="card_text">HAZARD GAMING </p>
+                <p class="card_text">ANONYMOUS </p>
             </div>
         </div>
         <div class="card" data-name="thumbnail">
             <img src="assets/t51.jpg" alt="">
             <div class="card_body">
                 <h6 class="card_title">Thumbnail</h6>
-                <p class="card_text">HAZARD GAMING </p>
+                <p class="card_text">ANONYMOUS </p>
             </div>
         </div>
 
