--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Portfolio - Tarun</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel = "icon" href = 
     "./assets/main/tarun1.ico" 
             type = "image/x-icon">
 </head>
 <body>
+    <div id="loco">
     <nav id="dekstop-nav">
         <div class="logo">Tarun Gaur</div>
         <div>
@@ -261,6 +263,8 @@
         </nav>
         <p>Copyright &#169 2024 Tarun. All Right Reserved</p>
     </footer>
+    </div>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
 </body>
 </html>
