--- a/index.html
+++ b/index.html
@@ -10,8 +10,32 @@
     <link rel = "icon" href = 
     "./assets/main/tarun1.ico" 
             type = "image/x-icon">
+            <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script src="pace.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-bez@1.0.11/src/jquery.bez.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 </head>
 <body>
+    <!-- Preloader -->
+<div id="preloader">
+    <div class="p">LOADING</div>
+</div>
+
+ <!-- <h1 class="counter">0</h1>
+
+    <div class="overlay">
+     <div class="bar"> 
+
+    </div></div> -->
+    <div class="dots"></div>
+    <div class="dots-2"></div>
+    <div class="dots-3"></div>
+    <div class="dots-4"></div>
+    <div class="dots-5"></div>
+    <div class="dots-6"></div>
+    <!-- <div class="scrollbar" id="style-4">
+        <div class="force-overflow"></div>
+      </div> -->
     <nav id="dekstop-nav">
         <div class="logo">Tarun Gaur</div>
         <div>
@@ -22,6 +46,9 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div></nav>
+        <div id="looptext">
+                <h1><b>PROFESSIONAL <span>GRAPHIC</span> DESIGNER. PROFESSIONAL <span>GRAPHIC</span> DESIGNER. PROFESSIONAL <span>GRAPHIC</span> DESIGNER. PROFESSIONAL <span>GRAPHIC</span> DESIGNER</b></h1>
+            </div>
         <nav id="hamburger-nav">
            
             <div class="logo">Tarun Gaur</div>
@@ -41,7 +68,7 @@
         </nav>
         <section id="profile">
             <div class="section__pic-container">
-                <img src="./assets/main/tarun1.png" alt="Tarun Gaur" srcset="">
+                <img src="./assets/main/tarun3.png" alt="Tarun Gaur" srcset="">
             </div>
             <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
@@ -57,11 +84,12 @@
                      onclick="location.href='https://x.com/T4run_11'"
                       srcset="">
                     <img 
-                    src="./assets/insta1.png" alt="X Profile" class="icon"
+                    src="./assets/insta1.png" id="instaicon" alt="X Profile" class="icon"
                      onclick="location.href='https://instagram.com/t4run_11'"
                       srcset="">
                 </div>
             </div>
+
         </section>
     <section id="about">
         <p class="section__text__p1">Get To Know More</p>
@@ -222,8 +250,8 @@
                     <img src="./assets/p8.PNG" class="project-img" alt="project 1">
                 </div>
                 <h2 class="experience-sub-title project-title">Package Designs</h2>
-                <div class="btn-container"> 
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='./projects.html'">Click Here</button>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='./projects.html'" >Click Here</button>
 
                 </div>
             </div>
@@ -261,7 +289,72 @@
         </nav>
         <p>Copyright &#169 2024 Tarun. All Right Reserved</p>
     </footer>
-    </div>
     <script src="script.js"></script>
-</body>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+
+<script>function startLoader() {
+    let counterElement = document.querySelector(".counter");
+    let currentValue = 0;
+
+    function updateCounter()  {
+        if(currentValue === 100) {
+            return;
+        }
+
+        currentValue += Math.floor(Math.random() * 10) + 1;
+
+        if(currentValue > 100) {
+            currentValue = 100;
+        }
+        counterElement.textContent = currentValue;
+
+        let delay = Math.floor(Math.random() * 200) + 50;
+        setTimeout(updateCounter, delay);
+    }
+    updateCounter();
+}
+
+startLoader();
+gsap.to(".counter", 0.25, {
+    delay: 3.5,
+    opacity: 0,
+
+});
+
+gsap.to(".bar", 1.5,{
+    delay: 3.5,
+    height:0,
+    stagger: {
+        amount: 0.5
+    },
+    ease: "power4.inOut",
+});
+</script>
+
+<script>
+
+paceOptions = {
+ajax: true,
+document: true,
+eventLag: false
+};
+
+Pace.on('done', function() {
+$('.pre').delay(500).animate({top: '30%', opacity: '0'}, 3000, $.bez([0.19,1,0.22,1]));
+
+
+$('#preloader').delay(1500).animate({top: '-100%'}, 2000, $.bez([0.19,1,0.22,1]));
+
+TweenMax.from(".title", 1.5, {
+     delay: 1.8,
+          y: 10,
+          opacity: 0,
+          ease: Expo.easeInOut
+    })
+});
+
+</script>
+
+
+    </body>
 </html>
