--- a/projects.html
+++ b/projects.html
@@ -12,9 +12,14 @@
             <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
-    
+    <div class="dots"></div>
+    <div class="dots-2"></div>
+    <div class="dots-3"></div>
+    <div class="dots-4"></div>
+    <div class="dots-5"></div>
+    <div class="dots-6"></div>
     <nav id="dekstop-nav">
-        <div class="logo">Tarun Gaur</div>
+        <div class="logo"><a href="./index.html">Tarun Gaur</a></div>
         <div>
             <ul class="nav-links">
                 <li><a href="./index.html">About</a></li>
@@ -43,7 +48,7 @@
 
     <div class="container">
         <div class="filter_buttons">
-            <button class="active" data-name="all">Show all</button>
+            <button class="active" data-name="all">Home</button>
             <button data-name="thumbnail">Thumbnails</button>
             <button data-name="poster">Posters</button>
             <button data-name="product">Products</button>
@@ -412,7 +417,13 @@
                 <p class="card_text">ANONYMOUS </p>
             </div>
         </div>
-
+        <div class="card" data-name="thumbnail">
+            <img src="assets/t51.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">ANONYMOUS </p>
+            </div>
+        </div>
 
 
 
