--- a/projects.html
+++ b/projects.html
@@ -424,6 +424,13 @@
                 <p class="card_text">ANONYMOUS </p>
             </div>
         </div>
+        <div class="card" data-name="thumbnail">
+            <img src="assets/1724263090557.jpg" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Thumbnail</h6>
+                <p class="card_text">ANONYMOUS </p>
+            </div>
+        </div>
 
 
 
