--- a/projects.html
+++ b/projects.html
@@ -70,6 +70,13 @@
                 <p class="card_text">DIYA PLAYS </p>
             </div>
         </div>
+        <div class="card vposter" data-name="poster">
+            <img src="assets/p15.png" alt="">
+            <div class="card_body">
+                <h6 class="card_title">Poster</h6>
+                <p class="card_text">Anshi Jangir </p>
+            </div>
+        </div>
         <div class="card" data-name="thumbnail">
             <img src="assets/t6.jpg" alt="">
             <div class="card_body">
