--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <div class="dots-5"></div>
     <div class="dots-6"></div>
     <nav id="dekstop-nav">
-        <div class="logo"><a href="./index.html">Tarun Gaur</a></div>
+    <a href="./index.html"><div class="logo">Tarun Gaur</div> </a>
         <div>
             <ul class="nav-links">
                 <li><a href="./index.html">About</a></li>
