--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education" class="icon">
                         <h3>Education</h3>
-                        <p>High School graduate<br>B.Tech Computer Science</p>
+                        <p>High School graduate<br>B.Tech Computer Science*</p>
                     </div>
                 </div>
                 <div class="text-container">
